--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,17 +1,19 @@
 <div class="row">
-  <div class="col-xs-12">
-    <img src="" alt="" class="img-respnsive">
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h1>Contact Name</h1>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group">
-      <button type="button" class="btn btn-primany dropdown-toggle">Manage Contacts <span class="caret"></span></button>
+    <div class="col-xs-12">
+      <button class="btn-success">Edit</button>
+      <button class="btn-success">Delete</button>
     </div>
   </div>
-</div>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+       <a href="#" class="list-group-item clearfix" *ngFor="let contact of contacts">
+        <div class="pull-right">
+            <ul>
+                <li>{{ contact.email }}</li>
+                <li>{{ contact.phone }}</li>
+            </ul>
+        </div>
+      </a>
+    </div>
+  </div>
