--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,16 +1,28 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3>{{contact.name}}</h3>
-        <img src="{{ contact.imageUrl }}" alt="{{contact.name}}" class="img-reponsive" style="max-height: 50px;">
-        <span>
-          <button class="btn-primary pull-right">Edit</button>
-          <button class="btn-danger pull-right">Delete</button>
-        </span>
-    </div>
-    <div class="panel-body">
-      <div class="col-xs-12">
-        <p>Email: </p>
-        <p>Phone:</p>
-     </div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="panel panel-default">
+      <div class="panel-heading clearfix">
+        <div class="pull-left">
+          <span class="title">{{ contact.name }}</span>
+          <img src="{{ contact.imageUrl }}" alt="{{contact.name}}" class="img-reponsive" style="max-height: 100px;">
+        </div>
+        <div class="pull-right">
+          <a class="btn btn-primary">Edit</a>
+          <a class="btn btn-danger">Delete</a>
+        </div>  
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-xs-12">
+            <strong>Email:</strong>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <strong>Phone:</strong>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+</div>
