--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,17 +1,30 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-      <h3><b>Contacts</b> <button class="btn-success pull-right">New Contact</button> </h3>
-  </div>
-  <div class="panel-body">
+<div class="row">
     <div class="col-xs-12">
-      <a href="#" class="list-group-item clearfix" *ngFor="let contact of contacts">
-       <div class="pull-left">
-        <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-       </div>
-       <span class="pull-right">
-         <img src="{{ contact.imageUrl }}" alt="{{contact.name}}" class="img-reponsive" style="max-height: 50px;">
-       </span>
-     </a>
-   </div>
+      <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+          <div class="row">
+            <div class="pull-left">
+            <span class="title">Contacts</span>
+            </div>
+            <div class="pull-right">
+              <a class="btn btn-success">New Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-xs-12">
+                <a href="#" class="list-group-item clearfix" *ngFor="let contact of contacts">
+                    <div class="pull-left">
+                     <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+                    </div>
+                    <span class="pull-right">
+                      <img src="{{ contact.imageUrl }}" alt="{{contact.name}}" class="img-reponsive" style="max-height: 50px;">
+                    </span>
+                  </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
