--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-md-5">
     <app-contact-list></app-contact-list>
@@ -5,4 +6,5 @@
   <div class="col-md-4">
     <app-contact-detail></app-contact-detail>
   </div>
+</div>
 </div>
