--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<app-header></app-header>
+<cms-header (featureSelected)="onNavigate($event)"></cms-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <app-contacts></app-contacts>
-    </div>
+      <div class="col-md-12">
+          <cms-contact-list *ngIf="loadedFeature === 'contact'"></cms-contact-list>
+          <cms-contact-detail *ngIf="loadedFeature !== 'contact'"></cms-contact-detail>
+      </div>
   </div>
 </div>
