--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,28 +1,33 @@
 <div class="row">
-  <div class="col-xs-12">
-    <div class="panel panel-default">
-      <div class="panel-heading clearfix">
-        <div class="pull-left">
-          <span class="title">{{ contact.name }}</span>
-          <img src="{{ contact.imageUrl }}" alt="{{contact.name}}" class="img-reponsive" style="max-height: 100px;">
-        </div>
-        <div class="pull-right">
-          <a class="btn btn-primary">Edit</a>
-          <a class="btn btn-danger">Delete</a>
-        </div>  
-      </div>
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-xs-12">
-            <strong>Email:</strong>
+    <div class="col-xs-12">
+      <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+          <div class="pull-left">
+            <span class="u-header-2">{{ contact.name }}</span>
+            <img 
+              [src]="contact.imageUrl"
+              [alt]="contact.name"
+              class="img-responsive"
+              style="max-height: 100px;" />
           </div>
+          <div class="pull-right">
+            <a class="btn btn-primary">Edit</a>
+            <a class="btn btn-danger">Delete</a>
+          </div>
+          
         </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <strong>Phone:</strong>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-xs-12">
+              <strong>Email:</strong> {{ contact?.email }}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <strong>Phone:</strong> {{ contact?.phone }}
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
