--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-<div class="row">
-  <div class="col-md-5">
-    <app-contact-list></app-contact-list>
-  </div>
-  <div class="col-md-4">
-    <app-contact-detail></app-contact-detail>
-  </div>
-</div>
-</div>
+    <div class="row">
+      <div class="col-md-5">
+        <cms-contact-list></cms-contact-list>
+      </div>
+      <div class="col-md-4">
+        <cms-contact-detail></cms-contact-detail>
+      </div>
+    </div>
+    </div>
