--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <div class="container">
   <div class="row">
       <div class="col-md-12">
-          <cms-contact-list *ngIf="loadedFeature === 'contact'"></cms-contact-list>
-          <cms-contact-detail *ngIf="loadedFeature !== 'contact'"></cms-contact-detail>
+          <cms-contacts></cms-contacts>
       </div>
   </div>
 </div>
+
+
