--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -10,11 +10,10 @@
               class="img-responsive"
               style="max-height: 100px;" />
           </div>
-          <div class="pull-right">
+          <div class="pull-right btn-toolbar">
             <a class="btn btn-primary">Edit</a>
             <a class="btn btn-danger">Delete</a>
           </div>
-          
         </div>
         <div class="panel-body">
           <div class="row">
