--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,14 +1,23 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Contact</button>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <span class="panel-heading u-header-1">Contacts</span>
+                    <a class="btn btn-success pull-right">New Contact</a>
+                </div>
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <cms-contact-item 
+                        *ngFor="let contact of contacts" 
+                        [contact]="contact" 
+                        (contactSelected)="onContactSelected(contact)"></cms-contact-item>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<hr>
-<div class="row">
-    <div class="col-xs-12"> 
-        <cms-contact-item 
-        *ngFor="let contactEl of contacts" 
-        [contact]="contactEl" 
-        (contactSelected)="onContactSelected(contactEl)"></cms-contact-item>
-    </div>
-</div>
+  
