--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <cms-header (featureSelected)="onNavigate($event)"></cms-header>
-<div class="container">
-  <div class="row">
-      <div class="col-md-12">
-          <cms-contacts></cms-contacts>
-      </div>
-  </div>
+<div class="container pull-left">
+  <cms-documents *ngIf="loadedFeature ==='document'"></cms-documents>
+  <cms-message-list *ngIf="loadedFeature ==='message'"></cms-message-list>
+  <cms-contacts *ngIf="loadedFeature === 'contact'"></cms-contacts>
 </div>
 
 
