--- a/src/app/messages/message-list/message-edit/message-edit.component.html
+++ b/src/app/messages/message-list/message-edit/message-edit.component.html
@@ -26,9 +26,9 @@
       </div>
 
       <div class="row">
-        <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAddItem()">Send</button>
-          <button class="btn btn-danger" type="button">Clear</button>
+        <div class="col-xs-12 btn-toolbar">
+          <button class="btn btn-success" type="button" (click)="onSendMessage()">Send</button>
+          <button class="btn btn-danger" type="button"(click)="onClear()">Clear</button>
         </div>
       </div>
 
