--- a/src/app/documents/document-list/document-list.component.html
+++ b/src/app/documents/document-list/document-list.component.html
@@ -9,8 +9,7 @@
       <div class="center-panel">
         <cms-document-item
         *ngFor="let document of documents"
-        [document]="document"
-        (documentSelected)="onDocumentSelected(document)">
+        [document]="document">
       </cms-document-item>
       </div>
     </div>
