--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -12,8 +12,7 @@
                     <div class="col-xs-12">
                         <cms-contact-item 
                         *ngFor="let contact of contacts" 
-                        [contact]="contact" 
-                        (contactSelected)="onContactSelected(contact)"></cms-contact-item>
+                        [contact]="contact"></cms-contact-item>
                     </div>
                 </div>
             </div>
