--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -4,15 +4,16 @@
             <div class="panel-heading">
                 <div class="row">
                     <span class="panel-heading u-header-1">Contacts</span>
-                    <a class="btn btn-success pull-right">New Contact</a>
+                    <a class="btn btn-success pull-right" (click)="onNewcontact()">New Contact</a>
                 </div>
             </div>
             <div class="panel-body">
                 <div class="row">
                     <div class="col-xs-12">
                         <cms-contact-item 
-                        *ngFor="let contact of contacts" 
-                        [contact]="contact"></cms-contact-item>
+                        *ngFor="let contact of contacts; let i = index" 
+                        [contact]="contact"
+                        [index]="i"></cms-contact-item>
                     </div>
                 </div>
             </div>
