--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -3,9 +3,9 @@
       <div class="row pad-all">
         <h4 class="title margin-left-right">{{document?.name}}</h4>
         <div class="row pull-right margin-left-right btn-toolbar">
-          <a class="btn btn-primary">View</a>
-          <a class="btn btn-info" >Edit</a>
-          <a class="btn btn-danger">Delete</a>
+          <a class="btn btn-primary" style="cursor: pointer;" (click)="onView();">View</a>
+          <a class="btn btn-info" style="cursor: pointer;" (click)="onEditDocument()">Edit</a>
+          <a class="btn btn-danger" style="cursor: pointer;" (click)="onDelete();">Delete</a>
         </div>
       </div>
     </div>
