--- a/src/app/contacts/contact-list/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-list/contact-item/contact-item.component.html
@@ -1,13 +1,13 @@
 <a  style="cursor: pointer;" 
-    [routerLink]="[index]"
+    [routerLink]="[contact?.id]"
     routerLinkActive="active"
     class="list-group-item clearfix">
   <div class="pull-left">
-      <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+      <h4 class="list-group-item-heading">{{ contact?.name }}</h4>
   </div>
   <span class="pull-right">
-      <img [src]="contact.imageUrl" 
-      alt="{{ contact.name }}" 
+      <img [src]="contact?.imageUrl" 
+      alt="{{ contact?.name }}" 
       class="img-responsive" 
       style="max-height: 50px;">
   </span>
