--- a/src/app/documents/document-list/document-list.component.html
+++ b/src/app/documents/document-list/document-list.component.html
@@ -8,9 +8,8 @@
     <div class="panel-body">
       <div class="center-panel">
         <cms-document-item
-        *ngFor="let document of documents; let i = index"
-        [document]="document"
-        [index]="i">
+        *ngFor="let document of documents"
+        [document]="document">
       </cms-document-item>
       </div>
     </div>
