--- a/src/app/messages/message-list/message-edit/message-edit.component.html
+++ b/src/app/messages/message-list/message-edit/message-edit.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <form action="" id="document-edit">
+    <form id="message-edit">
       <div class="row">
 
         <div class="col-sm-12 form-group">
@@ -11,7 +11,7 @@
             class="form-control"
             size="120"
             max="120"
-            #subjectInput />
+            #subject />
         </div>
 
         <div class="col-sm-12 form-group">
@@ -22,15 +22,15 @@
             class="form-control"
             size="120"
             max="255"
-            #messageInput />
+            #msgText />
         </div>
       </div>
 
       <div class="row">
-        <div class="col-xs-12 btn-toolbar">
+        <div class="col-xs-12">
           <button
             class="btn btn-success" 
-            type="button"
+            type="submit"
             (click)="onSendMessage()">Send</button>
           <button
             class="btn btn-danger"
