--- a/src/app/contacts/contact-list/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-list/contact-edit/contact-edit.component.html
@@ -1,20 +1,19 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <form id="contact-edit" (ngSubmit)="onSubmit(f)" #f="ngForm">
+    <form id="contact-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
       <div class="row">
         <div class="col-sm-12 form-group">
           <label for="name">Name</label>
           <input
             type="text"
             id="name"
+            name="name"
+            [ngModel]="contact?.name"
+            #name="ngModel"
             class="form-control required"
             size="120"
             max="120"
-            [ngModel]="contact?.name"
-            required
-            #name
-            name="name"
-          >
+            required>
         </div>
 
         <div class="col-sm-12 form-group">
@@ -22,15 +21,17 @@
           <input
             type="text"
             id="email"
+            name="email"
+            [ngModel]="contact?.email"
+            #email="ngModel"
             class="form-control required"
             size="120"
             max="255"
-            [ngModel]="contact?.email"
             required
-            #email="ngModel"
-            name="email"
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
-          <div *ngIf="email.touched && email.invalid" class="alert alert-danger">Enter a valid Email address</div>
+        </div>
+        <div class="col-sm-12 alert alert-danger" *ngIf="email.dirty && !email.valid">
+          Enter a valid email address
         </div>
 
         <div class="col-sm-12 form-group">
@@ -38,15 +39,16 @@
           <input
             type="text"
             id="phone"
+            name="phone"
+            [ngModel]="contact?.phone"
+            #phone="ngModel"
             class="form-control invalid"
             size="150"
             max="255"
-            [ngModel]="contact?.phone"
-            #phone="ngModel"
-            name="phone"
-            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
-          >
-          <div *ngIf="phone.dirty && phone.invalid" class="alert alert-danger">Enter a valid phone number</div>
+            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*">
+        </div>
+        <div class="col-sm-12" *ngIf="phone.dirty && !phone.valid">
+          Enter a valid phone number
         </div>
 
         <div class="col-sm-12 form-group">
@@ -54,13 +56,12 @@
           <input
             type="text"
             id="imageUrl"
-            class="form-control"
-            size="150"
-            max="255"
-            #imageUrl
             name="imageUrl"
             [ngModel]="contact?.imageUrl"
-          >
+            #imageUrl="ngModel"
+            class="form-control"
+            size="150"
+            max="255">
         </div>
       </div>
 
@@ -81,16 +82,19 @@
         </div>
       </div>
 
-      <div *ngIf="f.touched && !f.valid" class="alert alert-danger">
-        The Name and Email are required.
+      <div class="row" *ngIf="(name.touched && name.invalid) || (email.touched && email.invalid)">
+        <div class="col-sm-12 alert alert-danger">
+          The Name and Email are required.
+        </div>
       </div>
 
       <div class="row">
-        <div class="col-xs-12 btn-toolbar">
-          <button [disabled]="!f.valid" class="btn btn-success" type="submit">Save</button>
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
           <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
+
     </form>
   </div>
 </div>
