--- a/src/app/contacts/contact-list/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-list/contact-item/contact-item.component.html
@@ -1,14 +1,16 @@
-<a  style="cursor: pointer;" 
-    [routerLink]="[contact?.id]"
-    routerLinkActive="active"
-    class="list-group-item clearfix">
+<a
+  href="#" 
+  class="list-group-item clearfix"
+  [routerLink]="['/contacts', contact?.id]"
+  routerLinkActive="active">
   <div class="pull-left">
-      <h4 class="list-group-item-heading">{{ contact?.name }}</h4>
+    <h4 class="list-group-item-heading">{{ contact?.name }}</h4>
   </div>
   <span class="pull-right">
-      <img [src]="contact?.imageUrl" 
-      alt="{{ contact?.name }}" 
-      class="img-responsive" 
-      style="max-height: 50px;">
+    <img 
+      [src]="contact?.imageUrl"
+      [alt]="contact?.name"
+      class="img-responsive"
+      style="max-height: 50px;" />
   </span>
 </a>
