--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -1,27 +1,26 @@
 <div class="panel panel-default" xmlns="http://www.w3.org/1999/html">
-    <div class="panel-heading">
-      <div class="row pad-all">
-        <h4 class="title margin-left-right">{{document?.name}}</h4>
-        <div class="row pull-right margin-left-right btn-toolbar">
-          <a class="btn btn-primary" style="cursor: pointer;" (click)="onView();">View</a>
-          <a class="btn btn-info" style="cursor: pointer;" (click)="onEditDocument()">Edit</a>
-          <a class="btn btn-danger" style="cursor: pointer;" (click)="onDelete();">Delete</a>
-        </div>
-      </div>
-    </div>
-    <div class="panel-body">
-      <div class="pad-left-right">
-        <div class="row">
-          <label>Description:</label>
-          <span class="label-value">{{ document?.description }}</span>
-        </div>
-        <br>
-        <div class="row">
-          <label>URL:</label>
-          <span class="label-value">{{ document?.url }}</span>
-        </div>
+  <div class="panel-heading">
+    <div class="row pad-all">
+      <h4 class="title margin-left-right">{{ document?.name }}</h4>
+      <div class="row pull-right margin-left-right">
+        <a class="btn btn-primary" (click)="onView();">View</a>
+        <a class="btn btn-info" [routerLink]="['/documents', document?.id, 'edit']">Edit</a>
+        <a class="btn btn-danger" (click)="onDelete();">Delete</a>
       </div>
     </div>
   </div>
-  
-  
+  <div class="panel-body">
+    <div class="pad-left-right">
+      <div class="row">
+        <label>Description:</label><br />
+        <span class="label-value">{{ document?.description }}</span>
+      </div>
+      <br>
+      <div class="row">
+        <label>URL:</label><br />
+        <span class="label-value">{{ document?.url }}</span>
+      </div>
+    </div>
+  </div>
+</div>
+
