--- a/src/app/documents/document-list/document-item/document-item.component.html
+++ b/src/app/documents/document-list/document-item/document-item.component.html
@@ -1,6 +1,6 @@
-<a  style="cursor: pointer;" 
-    [routerLink]="[document?.id]"
-    routerLinkActive="active"
-    class="list-group-item clearfix documentDiv">
-    {{ document?.name }}
+<a
+  class="list-group-item clearfix documentDiv"
+  [routerLink]="['/documents', document?.id]"
+  routerLinkActive="active">
+  {{ document?.name }}
 </a>
